<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/kotlin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#62FD00"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/kotlin"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/java"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFD600"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/java"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/c2plus"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FF3300"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/c"
        android:textColor="@color/black"
        android:textSize="40sp" />

</LinearLayout>